--- a/SUIBE_DID_Data_Manager/templates/layout.html
+++ b/SUIBE_DID_Data_Manager/templates/layout.html
@@ -26,7 +26,7 @@
           type="text/css"
           href="{{ static_url_for('static', filename='build/main_css.bundle.css') }}"
   />
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
   <style>
     .no_type_a:link {
       color: black !important;
@@ -159,9 +159,9 @@
 {% block js_file %}
 <script src="{{ static_url_for('static', filename='build/main_js.bundle.js') }}"></script>
 <script src="../static/build/jquery.min.js"></script>
-<script type="text/javascript" src="../static/build/jquery.area.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+
+
 <script src="../static/build/axios.js"></script>
 {% endblock %}
 {% block add_js %}{% endblock %}
