--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('public.home') }}">DID引擎
+        <a class="nav-link" href="{{ url_for('public.home') }}">DID工具
           <span class="sr-only">(current)</span>
         </a>
       </li>
