--- a/SUIBE_DID_Data_Manager/templates/certificate_style_normal.html
+++ b/SUIBE_DID_Data_Manager/templates/certificate_style_normal.html
@@ -23,7 +23,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous"
         />
-        <title>证书模板_Bootstrap Version</title>
+        <title>金融比赛证书</title>
     </head>
     <body>
         <div id="main">
@@ -92,8 +92,8 @@
   "id": "dsfewr23sdcsdfeqeddadfd",
   "type": ["Credential", "cpt100"],
   "issuer": "did:weid:1:2323e3e3dweweewew2",
-  "issued": "2010-01-01T21:19:10Z",
-  "cert_name": "获奖证书",
+  "issued": "2020-06-09T14:19:10Z",
+  "cert_name": "金融比赛证书",
   "claim": {
     "primeNumberIdx":"1234",
     "name": "Handsome boy",
@@ -106,7 +106,7 @@
   },
   "signature": [{
     "type": "LinkedDataSignature2015",
-    "created": "2016-06-18T21:19:10Z",
+    "created": "2020-06-09T14:19:10Z",
     "creator": "did:weid:1:2323e3e3dweweewew2",
     "domain": "www.diriving_card.com",
     "nonce": "598c63d6",
