--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -1,48 +1,53 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="{{ url_for('public.home') }}">
-     SUIBE DID Data Manager
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('public.home') }}">DID引擎
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      {% if current_user and current_user.is_authenticated %}
+    <a class="navbar-brand" href="{{ url_for('public.home') }}">
+        SUIBE DID Data Manager
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-      {% endif %}
-
-       <li class="nav-item ">
-           <a class="nav-link" href="{{ url_for('public.Identity_manager') }}">DID身份数据管理</a>
-       </li>
-       <li class="nav-item">
-           <a class="nav-link" href="{{ url_for('public.Visualization_tools') }}">可视化功能</a>
-       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">数据共享</a>
-      </li>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('public.home') }}">DID工具
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
 
 
-    </ul>
+            {% if current_user and current_user.is_authenticated %}
 
-    {% if current_user and current_user.is_authenticated %}
-    <ul class="navbar-nav my-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('user.members') }}">Logged in as {{ current_user.username }}</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.logout') }}">
-          <i class="fa fa-sign-out"></i>
-        </a>
-      </li>
-    </ul>
-    {% elif form %}
-    {% endif %}
-  </div><!-- /.navbar-collapse -->
+
+            {% endif %}
+
+            <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('public.about') }}">DID身份数据管理</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/about/">可视化功能</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/about/">数据共享</a>
+            </li>
+
+
+
+        </ul>
+
+        {% if current_user and current_user.is_authenticated %}
+            <ul class="navbar-nav my-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('user.members') }}">Logged in as {{ current_user.username }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('public.logout') }}">
+                        <i class="fa fa-sign-out"></i>
+                    </a>
+                </li>
+            </ul>
+        {% elif form %}
+        {% endif %}
+    </div><!-- /.navbar-collapse -->
 </nav>
