--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="{{ url_for('public.home') }}">
         SUIBE DID Data Manager
@@ -7,31 +6,26 @@
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('public.home') }}">DID工具
+                <a class="nav-link" href="{{ url_for('public.home') }}">DID引擎
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
-
-
             {% if current_user and current_user.is_authenticated %}
-
 
             {% endif %}
 
             <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('public.about') }}">DID身份数据管理</a>
+                <a class="nav-link" href="{{ url_for('public.Identity_manager') }}">DID身份数据管理</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/about/">可视化功能</a>
+                <a class="nav-link" href="{{ url_for('public.Visualization_tools') }}">可视化功能</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/about/">数据共享</a>
+                <a class="nav-link" href="{{ url_for('public.about') }}">数据共享</a>
             </li>
-
 
 
         </ul>
@@ -49,5 +43,5 @@
             </ul>
         {% elif form %}
         {% endif %}
-    </div><!-- /.navbar-collapse -->
+    </div>
 </nav>
