--- a/SUIBE_DID_Data_Manager/templates/public/tables_data.html
+++ b/SUIBE_DID_Data_Manager/templates/public/tables_data.html
@@ -5,7 +5,7 @@
     <!-- Basic -->
     <meta charset="UTF-8">
 
-    <title>Editable Tables | Okler Themes | Porto-Admin</title>
+    <title>DID身份数据管理</title>
     <meta name="keywords" content="HTML5 Admin Template" />
     <meta name="description" content="Porto Admin - Responsive HTML5 Template">
     <meta name="author" content="okler.net">
@@ -112,14 +112,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-                <a class="nav-link" href="/">DID引擎</a>
+                <a class="nav-link" href="/">主面板</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/about/">DID身份数据管理</a>
                 <span class="sr-only">(current)</span>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('public.Visualization_tools') }}">可视化功能</a>
+                <a class="nav-link" href="{{ url_for('public.Visualization_tools') }}">身份/数据/凭证可视化查看</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about/">数据共享</a>
@@ -168,14 +168,15 @@
                         <a href="#" class="fa fa-times"></a>
                     </div>
 
-                    <h2 class="panel-title">Weid:0xF0311be2ccE44a9430AD6d86c6AAB97D5d1058bD 所管理数据</h2>
+                    <h2 class="panel-title">Weid:0xF0311be2ccE44a9430AD6d86c6AAB97D5d1058bD（超级教育链）下的凭证与数据</h2>
                 </header>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="mb-md">
                                 <input type="file" id="btn_file" style="display:none">
-                                <button  type="button" class="btn btn-primary" onclick="F_Open_dialog()">导入数据 <i class="fa fa-plus"></i></button>
+                                <button  type="button" class="btn btn-primary" onclick="F_Open_dialog()">导入凭证 <i class="fa fa-plus"></i></button>
+                                <button  type="button" class="btn btn-primary" >同步数据 <i class="fa fa-plus"></i></button>
                                 <!-- <button  class="btn btn-primary" onclick="downloadDoc()">导出 Document<i class="fa fa-inbox "></i></button>-->
                                 <a  class="btn btn-primary" href="{{ url_for('public.Identity_manager') }}">返回 <i class="fa fa-forward"></i></a>
                             </div>
@@ -183,6 +184,8 @@
                         </div>
 
                     </div>
+                    <b>凭证：</b>
+                    <br>
                     <table class="table table-bordered table-striped mb-none" id="datatable-editable">
                         <thead>
                         <tr>
@@ -197,7 +200,7 @@
                         <tr class="gradeX" >
                             <td>1</td>
                             <td>金融比赛证书</td>
-                            <td>未上链</td>
+                            <td>已上链</td>
                             <td>2020-06-09</td>
 
                             <td class="actions">
@@ -212,7 +215,7 @@
                         <tr class="gradeC">
                             <td>2</td>
                             <td>创新大赛证书</td>
-                            <td>已上链</td>
+                            <td>未上链</td>
                             <td>2020-07-10</td>
                             <td class="actions">
                                 <a class="btn btn-outline-secondary" v-on:click="get_addr(key_type)">详情</a>
@@ -222,7 +225,7 @@
                                 <a href="#" class="on-default remove-row"><i class="fa fa-trash-o"></i></a>
                             </td>
                         </tr>
-                        <tr class="gradeA">
+                        <!-- <tr class="gradeA">
                             <td>3</td>
                             <td>教员认证证书
                             </td>
@@ -262,10 +265,44 @@
                                 <a href="#" class="hidden on-editing cancel-row"><i class="fa fa-times"></i></a>
                                 <a href="#" class="on-default remove-row"><i class="fa fa-trash-o"></i></a>
                             </td>
-                        </tr>
+                        </tr> -->
 
 
 
+                        </tbody>
+                        
+                    </table>
+                    <br>
+                    <b>数据：</b>
+                    <br>
+                    <table class="table table-bordered table-striped mb-none" id="datatable-editable">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>链上地址</th>
+                                <th>记录值</th>
+                                <th>记录人</th>
+                                <th>时间戳</th>
+                                <th>关联凭证</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>0x931fe3032b84b426cd57ec47aec2a126<br>b17ab4dcc3ea1eafd2c97b610a893326</td>
+                                <td>贡献github代码</td>
+                                <td>队长</td>
+                                <td>2020-06-05</td>
+                                <td>创新大赛证书</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>0x78b268ee3859885e104b423d7a54768<br>8f82ad4015e0770aed1ac2c636a563d26</td>
+                                <td>撰写比赛ppt</td>
+                                <td>队长</td>
+                                <td>2020-06-04</td>
+                                <td>创新大赛证书</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -324,62 +361,7 @@
                     "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
                     "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
                     "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "\t\t\t\t\t\t<tr class=\"gradeA\">\n" +
-                    "\t\t\t\t\t\t\t<td>3</td>\n" +
-                    "\t\t\t\t\t\t\t<td>教员认证证书\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "                            <td>已上链</td>\n" +
-                    "\t\t\t\t\t\t\t<td>2020-01-03</td>\n" +
-                    "\t\t\t\t\t\t\t<td class=\"actions\">\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "\t\t\t\t\t\t<tr class=\"gradeA\">\n" +
-                    "\t\t\t\t\t\t\t<td>4</td>\n" +
-                    "\t\t\t\t\t\t\t<td>英语六级证书\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "                            <td>未上链</td>\n" +
-                    "\t\t\t\t\t\t\t<td>2020-06-08</td>\n" +
-                    "\t\t\t\t\t\t\t<td class=\"actions\">\n" +
-                    "\t\t\t\t\t\t\t    <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "\t\t\t\t\t\t<tr class=\"gradeA\">\n" +
-                    "\t\t\t\t\t\t\t<td>5</td>\n" +
-                    "\t\t\t\t\t\t\t<td>奥林匹克竞赛证书</td>\n" +
-                    "                            <td>未上链</td>\n" +
-                    "\t\t\t\t\t\t\t<td>2020-07-08</td>\n" +
-                    "\t\t\t\t\t\t\t<td class=\"actions\">\n" +
-                    "\t\t\t\t\t\t\t    <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "                        <tr class=\"gradeA\">\n" +
-                    "                            <td>6</td>\n" +
-                    "                            <td>教师资格证书</td>\n" +
-                    "                            <td>未上链</td>\n" +
-                    "                            <td>2020-01-05</td>\n" +
-                    "                            <td class=\"actions\">\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "                                <a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "                            </td>\n" +
-                    "                        </tr>"
+                    "\t\t\t\t\t\t\t</td>\n"
 
             }
         </script>
@@ -445,60 +427,6 @@
                     "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
                     "\t\t\t\t\t\t\t</td>\n" +
                     "\t\t\t\t\t\t</tr>\n" +
-                    "\t\t\t\t\t\t<tr class=\"gradeA\">\n" +
-                    "\t\t\t\t\t\t\t<td>3</td>\n" +
-                    "\t\t\t\t\t\t\t<td>教员认证证书\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "                            <td>已上链</td>\n" +
-                    "\t\t\t\t\t\t\t<td>2020-01-03</td>\n" +
-                    "\t\t\t\t\t\t\t<td class=\"actions\">\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "\t\t\t\t\t\t<tr class=\"gradeA\">\n" +
-                    "\t\t\t\t\t\t\t<td>4</td>\n" +
-                    "\t\t\t\t\t\t\t<td>英语六级证书\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "                            <td>未上链</td>\n" +
-                    "\t\t\t\t\t\t\t<td>2020-06-08</td>\n" +
-                    "\t\t\t\t\t\t\t<td class=\"actions\">\n" +
-                    "\t\t\t\t\t\t\t    <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "\t\t\t\t\t\t<tr class=\"gradeA\">\n" +
-                    "\t\t\t\t\t\t\t<td>5</td>\n" +
-                    "\t\t\t\t\t\t\t<td>奥林匹克竞赛证书</td>\n" +
-                    "                            <td>未上链</td>\n" +
-                    "\t\t\t\t\t\t\t<td>2020-07-08</td>\n" +
-                    "\t\t\t\t\t\t\t<td class=\"actions\">\n" +
-                    "\t\t\t\t\t\t\t    <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t\t<a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "\t\t\t\t\t\t\t</td>\n" +
-                    "\t\t\t\t\t\t</tr>\n" +
-                    "                        <tr class=\"gradeA\">\n" +
-                    "                            <td>6</td>\n" +
-                    "                            <td>教师资格证书</td>\n" +
-                    "                            <td>未上链</td>\n" +
-                    "                            <td>2020-01-05</td>\n" +
-                    "                            <td class=\"actions\">\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">详情</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">上链</a>\n" +
-                    "                                <a class=\"btn btn-outline-secondary\" v-on:click=\"get_addr(key_type)\">导出</a>\n" +
-                    "                                <a href=\"#\" class=\"hidden on-editing cancel-row\"><i class=\"fa fa-times\"></i></a>\n" +
-                    "                                <a href=\"#\" class=\"on-default remove-row\"><i class=\"fa fa-trash-o\"></i></a>\n" +
-                    "                            </td>\n" +
-                    "                        </tr>"
             }
         }, 5000);
     }
